--- a/p2p/Makefile
+++ b/p2p/Makefile
@@ -11,16 +11,8 @@ CXXFLAGS := -O3 -shared -std=c++17 -fPIC -I../include -I$(RDMA_HOME) -I$(CUDA_IN
 	-Wl,-rpath=/usr/lib/x86_64-linux-gnu -lglog -lgflags -lgtest -lz -lelf -libverbs -lpthread
 
 # TCPX optional integration
-USE_TCPX ?= 0
+USE_TCPX ?= $(shell echo $${USE_TCPX:-0})
 TCPX_DIR := tcpx
-ifeq ($(USE_TCPX),1)
-  CXXFLAGS += -DUSE_TCPX -I$(TCPX_DIR)/include
-endif
-# link core
-TCPX_CORE_OBJS := $(TCPX_DIR)/device/unpack_kernels.o $(TCPX_DIR)/device/unpack_launch.o \
-                  $(TCPX_DIR)/src/bootstrap.o $(TCPX_DIR)/src/channel_manager.o \
-                  $(TCPX_DIR)/src/transfer_flow.o $(TCPX_DIR)/src/session_manager.o \
-                  $(TCPX_DIR)/src/transfer_manager.o
 
 # Python and pybind11 configuration
 PYTHON          ?= python3
@@ -28,7 +20,6 @@ PYTHON_CONFIG    = $(PYTHON)-config
 PYEXT           := $(shell $(PYTHON_CONFIG) --extension-suffix)
 PYBIND11_INCLUDES := $(shell $(PYTHON) -m pybind11 --includes)
 PYTHON_LDFLAGS := $(shell $(PYTHON_CONFIG) --ldflags)
-
 PYTHON_LIB := $(shell $(PYTHON_CONFIG) --ldflags | grep -o 'python[0-9.]*' | head -1 | sed 's/^/-l/')
 
 # Installation path
@@ -38,9 +29,9 @@ PREFIX ?= /usr/local
 LIBDIR ?= $(PREFIX)/lib
 INCDIR ?= $(PREFIX)/include
 
-LDFLAGS         = -L$(CUDA_LIB) -lcudart -lcuda \
-                  -Wl,-rpath,$(CUDA_LIB) -lglog -lgflags -lgtest \
-                  -lz -lelf -libverbs -lpthread
+LDFLAGS = -L$(CUDA_LIB) -lcudart -lcuda \
+           -Wl,-rpath,$(CUDA_LIB) -lglog -lgflags -lgtest \
+           -lz -lelf -libverbs -lpthread
 
 # Target and source files
 TARGET   := p2p$(PYEXT)
@@ -52,13 +43,26 @@ SOURCES := engine.cc pybind_engine.cc
 CORE_OBJECT := engine.o
 OBJECTS := $(SOURCES:.cc=.o)
 
+# TCPX Integration (auto-detect .cc + .cu)
 ifeq ($(USE_TCPX),1)
-OBJECTS += $(TCPX_CORE_OBJS)
+  CXXFLAGS += -DUSE_TCPX -I$(TCPX_DIR)/include -I$(TCPX_DIR)
+  $(info 🔧 Building with TCPX support)
+
+  TCPX_CC_SRCS := $(wildcard $(TCPX_DIR)/src/*.cc)
+  TCPX_CU_SRCS := $(wildcard $(TCPX_DIR)/device/*.cu)
+  TCPX_OBJS := $(patsubst %.cc,%.o,$(TCPX_CC_SRCS)) $(patsubst %.cu,%.o,$(TCPX_CU_SRCS))
+  OBJECTS  += $(TCPX_OBJS)
+
+  $(TCPX_DIR)/src/%.o: $(TCPX_DIR)/src/%.cc
+	$(CXX) $(CXXFLAGS) -c $< -o $@
+
+  $(TCPX_DIR)/device/%.o: $(TCPX_DIR)/device/%.cu
+	nvcc -c $< -o $@ -Xcompiler -fPIC -O3
 endif
 
 # Default target
 ifeq ($(USE_TCPX),1)
-all: tcpx_core $(TARGET) $(PLUGIN_SO)
+all: $(TARGET) $(PLUGIN_SO)
 else
 all: $(TARGET) $(PLUGIN_SO)
 endif
@@ -70,60 +74,33 @@ $(TARGET): $(OBJECTS) $(RDMA_HOME)/librdma.a
 	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
 	      -Wl,-rpath,$(CUDA_LIB)
 
-$(PLUGIN_SO): $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_HOME)/librdma_plugin.a $(TCPX_CORE_OBJS)
-	$(CXX) $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_HOME)/librdma_plugin.a $(TCPX_CORE_OBJS) \
+$(PLUGIN_SO): $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_HOME)/librdma_plugin.a $(TCPX_OBJS)
+	$(CXX) $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_HOME)/librdma_plugin.a $(TCPX_OBJS) \
 	      -L$(CUDA_LIB) -lcudart -lcuda \
 	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
 	      -Wl,-rpath,$(CUDA_LIB) $(PYTHON_LIB) -libverbs -lz -lelf
 
-
-$(RDMA_HOME)/librdma.a: $(filter-out $(RDMA_HOME)/nccl_plugin.cc, $(wildcard $(RDMA_HOME)/*.cc)) $(RDMA_HOME)/*.h
+$(RDMA_HOME)/librdma.a:
 	make -C $(RDMA_HOME) librdma.a -j$(nproc)
 
-$(RDMA_HOME)/librdma_plugin.a: $(filter-out $(RDMA_HOME)/nccl_plugin.cc, $(wildcard $(RDMA_HOME)/*.cc)) $(RDMA_HOME)/*.h
+$(RDMA_HOME)/librdma_plugin.a:
 	make CXXFLAGS="-DDISABLE_CALL_ONCE_STATIC" -C $(RDMA_HOME) librdma_plugin.a
 
-# Compile source files
 %.o: %.cc
 	$(CXX) $(CXXFLAGS) $(PYBIND11_INCLUDES) -c $< -o $@
 
-# TCPX build
-tcpx_core:
-	$(MAKE) -C $(TCPX_DIR) core -j$(nproc)
-	
-# Install the module
+# Install
 install: $(TARGET) $(PLUGIN_SO)
 	@mkdir -p $(INSTALL_DIR)
 	@cp $(TARGET) $(INSTALL_DIR)/
-	@echo "Installation complete. Module installed as: $(INSTALL_DIR)/$(TARGET)"
+	@echo "Installed: $(INSTALL_DIR)/$(TARGET)"
 	install -m 755 $(PLUGIN_SO) $(LIBDIR)/
 	install -m 755 $(RDMA_HOME)/librdma_plugin.a $(LIBDIR)/
 	install -m 644 $(CAPI_HEADER) $(INCDIR)/
 
-# Clean build artifacts
 clean:
 	rm -f $(OBJECTS) $(CORE_OBJECT) $(CAPI_OBJECT) $(TARGET) $(PLUGIN_SO)
 	make -C $(RDMA_HOME) clean -j$(nproc)
 ifeq ($(USE_TCPX),1)
 	make -C $(TCPX_DIR) clean -j$(nproc)
 endif
-
-# Test the module
-test: $(TARGET)
-	$(PYTHON) tests/test_engine_write.py
-
-# Install pybind11 if not available
-install-deps:
-	pip3 install pybind11
-
-# Help target
-help:
-	@echo "Available targets:"
-	@echo "  all          - Build the pybind11 module"
-	@echo "  install      - Install the module to Python site-packages"
-	@echo "  clean        - Remove build artifacts"
-	@echo "  test         - Run the test script"
-	@echo "  install-deps - Install pybind11 dependency"
-	@echo "  help         - Show this help message"
-
-.PHONY: all clean test install-deps help install tcpx_core
