--- a/p2p/Makefile
+++ b/p2p/Makefile
@@ -1,5 +1,8 @@
 # Makefile for UCCL P2P Engine pybind11 project
 
+# TCPX optional integration
+USE_TCPX ?= $(shell echo $${USE_TCPX:-0})
+
 # Compiler and flags
 CUDA_HOME ?= /usr/local/cuda
 CUDA_INC  := $(CUDA_HOME)/include
@@ -8,11 +11,13 @@ RDMA_HOME := ../collective/rdma
 CXX := g++
 CXXFLAGS := -O3 -shared -std=c++17 -fPIC -I../include -I$(RDMA_HOME) -I$(CUDA_INC) \
 	-Wno-pointer-arith -Wno-sign-compare -Wno-unused-variable \
-	-Wl,-rpath=/usr/lib/x86_64-linux-gnu -lglog -lgflags -lgtest -lz -lelf -libverbs -lpthread
+	-Wl,-rpath=/usr/lib/x86_64-linux-gnu -lglog -lgflags -lgtest -lz -lelf -lpthread
 
-# TCPX optional integration
-USE_TCPX ?= $(shell echo $${USE_TCPX:-0})
-TCPX_DIR := tcpx
+ifeq ($(USE_TCPX),1)
+	CXXFLAGS += -DUSE_TCPX
+else
+	CXXFLAGS += -libverbs
+endif
 
 # Python and pybind11 configuration
 PYTHON          ?= python3
@@ -29,9 +34,13 @@ PREFIX ?= /usr/local
 LIBDIR ?= $(PREFIX)/lib
 INCDIR ?= $(PREFIX)/include
 
-LDFLAGS = -L$(CUDA_LIB) -lcudart -lcuda \
-           -Wl,-rpath,$(CUDA_LIB) -lglog -lgflags -lgtest \
-           -lz -lelf -libverbs -lpthread
+LDFLAGS         = -L$(CUDA_LIB) -lcudart -lcuda \
+                  -Wl,-rpath,$(CUDA_LIB) -lglog -lgflags -lgtest \
+                  -lz -lelf -lpthread
+				  
+ifneq ($(USE_TCPX),1)
+	LDFLAGS += -libverbs
+endif
 
 # Target and source files
 TARGET   := p2p$(PYEXT)
@@ -39,68 +48,89 @@ PLUGIN_SO := libuccl_engine.so
 CAPI_SOURCE := uccl_engine.cc
 CAPI_HEADER := uccl_engine.h
 CAPI_OBJECT := $(CAPI_SOURCE:.cc=.o)
+ifeq ($(USE_TCPX),1)
+SOURCES := tcpx_engine.cc # TODO: pybind_tcpx_engine.cc
+CORE_OBJECT := tcpx_engine.o
+else
 SOURCES := engine.cc pybind_engine.cc
 CORE_OBJECT := engine.o
+endif
 OBJECTS := $(SOURCES:.cc=.o)
 
-# TCPX Integration (auto-detect .cc + .cu)
-ifeq ($(USE_TCPX),1)
-  CXXFLAGS += -DUSE_TCPX -I$(TCPX_DIR)/include -I$(TCPX_DIR)
-  $(info 🔧 Building with TCPX support)
-
-  TCPX_CC_SRCS := $(wildcard $(TCPX_DIR)/src/*.cc)
-  TCPX_CU_SRCS := $(wildcard $(TCPX_DIR)/device/*.cu)
-  TCPX_OBJS := $(patsubst %.cc,%.o,$(TCPX_CC_SRCS)) $(patsubst %.cu,%.o,$(TCPX_CU_SRCS))
-  OBJECTS  += $(TCPX_OBJS)
-
-  $(TCPX_DIR)/src/%.o: $(TCPX_DIR)/src/%.cc
-	$(CXX) $(CXXFLAGS) -c $< -o $@
-
-  $(TCPX_DIR)/device/%.o: $(TCPX_DIR)/device/%.cu
-	nvcc -c $< -o $@ -Xcompiler -fPIC -O3
-endif
-
-# Default target
-ifeq ($(USE_TCPX),1)
-all: $(TARGET) $(PLUGIN_SO)
-else
-all: $(TARGET) $(PLUGIN_SO)
-endif
-
 # Build the shared libraries
+ifeq ($(USE_TCPX),1)
+# Default target
+all: $(PLUGIN_SO)
+
+# only build plugin for tcpx now, TODO: add tcpx to p2p		  
+$(PLUGIN_SO): $(CAPI_OBJECT) $(CORE_OBJECT)
+	$(CXX) $(CAPI_OBJECT) $(CORE_OBJECT) \
+	      -L$(CUDA_LIB) -lcudart -lcuda \
+	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
+	      -Wl,-rpath,$(CUDA_LIB) $(PYTHON_LIB) -lz -lelf
+else
+# Default target
+all: $(TARGET) $(PLUGIN_SO)
+
 $(TARGET): $(OBJECTS) $(RDMA_HOME)/librdma.a
 	$(CXX) $(OBJECTS) $(RDMA_HOME)/librdma.a \
 	      -L$(CUDA_LIB) -lcudart -lcuda \
 	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
 	      -Wl,-rpath,$(CUDA_LIB)
 
-$(PLUGIN_SO): $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_HOME)/librdma_plugin.a $(TCPX_OBJS)
-	$(CXX) $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_HOME)/librdma_plugin.a $(TCPX_OBJS) \
+$(PLUGIN_SO): $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_HOME)/librdma_plugin.a
+	$(CXX) $(CAPI_OBJECT) $(CORE_OBJECT) $(RDMA_HOME)/librdma_plugin.a \
 	      -L$(CUDA_LIB) -lcudart -lcuda \
 	      -o $@ $(LDFLAGS) $(PYTHON_LDFLAGS) $(CXXFLAGS) \
 	      -Wl,-rpath,$(CUDA_LIB) $(PYTHON_LIB) -libverbs -lz -lelf
 
-$(RDMA_HOME)/librdma.a:
+$(RDMA_HOME)/librdma.a: $(filter-out $(RDMA_HOME)/nccl_plugin.cc, $(wildcard $(RDMA_HOME)/*.cc)) $(RDMA_HOME)/*.h
 	make -C $(RDMA_HOME) librdma.a -j$(nproc)
 
-$(RDMA_HOME)/librdma_plugin.a:
+$(RDMA_HOME)/librdma_plugin.a: $(filter-out $(RDMA_HOME)/nccl_plugin.cc, $(wildcard $(RDMA_HOME)/*.cc)) $(RDMA_HOME)/*.h
 	make CXXFLAGS="-DDISABLE_CALL_ONCE_STATIC" -C $(RDMA_HOME) librdma_plugin.a
+endif
 
+# Compile source files
 %.o: %.cc
 	$(CXX) $(CXXFLAGS) $(PYBIND11_INCLUDES) -c $< -o $@
 
-# Install
+# Install the module
 install: $(TARGET) $(PLUGIN_SO)
 	@mkdir -p $(INSTALL_DIR)
 	@cp $(TARGET) $(INSTALL_DIR)/
-	@echo "Installed: $(INSTALL_DIR)/$(TARGET)"
+	@echo "Installation complete. Module installed as: $(INSTALL_DIR)/$(TARGET)"
 	install -m 755 $(PLUGIN_SO) $(LIBDIR)/
+ifneq ($(USE_TCPX),1)
 	install -m 755 $(RDMA_HOME)/librdma_plugin.a $(LIBDIR)/
-	install -m 644 $(CAPI_HEADER) $(INCDIR)/
-
-clean:
-	rm -f $(OBJECTS) $(CORE_OBJECT) $(CAPI_OBJECT) $(TARGET) $(PLUGIN_SO)
-	make -C $(RDMA_HOME) clean -j$(nproc)
-ifeq ($(USE_TCPX),1)
-	make -C $(TCPX_DIR) clean -j$(nproc)
 endif
+	install -m 644 $(CAPI_HEADER) $(INCDIR)/
+# Clean build artifacts
+clean:
+	rm -f $(OBJECTS) $(CORE_OBJECT) $(CAPI_OBJECT) $(PLUGIN_SO)
+ifneq ($(USE_TCPX),1)
+	rm -f $(TARGET)
+	make -C $(RDMA_HOME) clean -j$(nproc)
+endif
+
+# Test the module
+test: $(TARGET)
+ifneq ($(USE_TCPX),1)
+	$(PYTHON) tests/test_engine_write.py
+endif
+
+# Install pybind11 if not available
+install-deps:
+	pip3 install pybind11
+
+# Help target
+help:
+	@echo "Available targets:"
+	@echo "  all          - Build the pybind11 module"
+	@echo "  install      - Install the module to Python site-packages"
+	@echo "  clean        - Remove build artifacts"
+	@echo "  test         - Run the test script"
+	@echo "  install-deps - Install pybind11 dependency"
+	@echo "  help         - Show this help message"
+
+.PHONY: all clean test install-deps help install 
