simply add ep build into build.sh, but have not tested the wheel functionality

--- a/docker/Dockerfile.rocm
+++ b/docker/Dockerfile.rocm
@@ -30,6 +30,7 @@ RUN apt-get update && \
 \
 # ───── eccl use hiredis as oob backend ─────
     apt-get install -y libhiredis-dev && \
+    apt-get install -y hipsolver hipblas hipsparse rocthrust hipblaslt && \
 \
 # ───── Clean up apt cache ─────
     rm -rf /var/lib/apt/lists/*
