--- a/docker/Dockerfile.efa
+++ b/docker/Dockerfile.efa
@@ -21,7 +21,7 @@ RUN apt-get update && \
     add-apt-repository ppa:deadsnakes/ppa && \
     apt-get update && \
     apt-get install -y --no-install-recommends \
-        python${PY_VER} python${PY_VER}-dev python${PY_VER}-venv python3-setuptools && \
+        python${PY_VER} python${PY_VER}-dev python${PY_VER}-venv python3-setuptools python3-distutils && \
 \
 # ───── Bootstrap pip for Python ${PY_VER} ─────
     curl -sS https://bootstrap.pypa.io/get-pip.py | python${PY_VER} && \
@@ -48,19 +48,25 @@ ARG EFA_VER=1.42.0
 RUN curl -O https://efa-installer.amazonaws.com/aws-efa-installer-${EFA_VER}.tar.gz && \
     tar -xf aws-efa-installer-${EFA_VER}.tar.gz && \
     cd aws-efa-installer && \
-    ./efa_installer.sh -y --skip-kmod -g --no-verify --minimal && \
+    ./efa_installer.sh -y --skip-kmod -g --no-verify && \
     cd .. && rm -rf aws-efa-installer*
 
-    # Set path to EFA libraries
-ENV LD_LIBRARY_PATH=/opt/amazon/efa/lib64:$LD_LIBRARY_PATH
-
 # Verify libfabric installation
-RUN fi_info -p efa || true
+RUN ls /opt/amazon/efa
+
+# Set path to EFA libraries
+ENV LD_LIBRARY_PATH=/opt/amazon/efa/lib64:$LD_LIBRARY_PATH
 
 # ─────────────────────────────────────────────────────────
 # Install Python build back-end (for Python ${PY_VER})
 # ─────────────────────────────────────────────────────────
 RUN python${PY_VER} -m pip install --no-cache-dir build auditwheel pybind11
+
+# ───── Install PyTorch with CUDA support ─────
+RUN python${PY_VER} -m pip install --no-cache-dir torch torchvision torchaudio \
+    --index-url https://download.pytorch.org/whl/cu128
+
+RUN python${PY_VER} -m pip install --no-cache-dir --upgrade setuptools
 
 # ───── Set Python ${PY_VER} as default python3 and python3-config ─────
 RUN ln -sf /usr/bin/python${PY_VER} /usr/local/bin/python3 && \
